Fix: Authorities DTO 변경